# rusty_ai

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  TODO.md  env.example  menu.md  new_test.md  sketch.md  term.md  yyy.md
.rusty/: history.md
src/: commands.rs  error.rs  main.rs
src/async_handler/: mod.rs
src/chat/: error.rs  history.rs  mod.rs
src/editor/: filepicker.rs  menu.rs  mod.rs
src/files/: error.rs  mod.rs
src/render/: legacy_mod.ra  menus.rs  mod.rs
src/syntax/: cache.rs  mod.rs
