[package]
name = "rusty_ai"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
# unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }

# -- CLI tool
inquire = "0.7.5"

# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }

crossterm = "0.29.0"
ropey = "1.6.1"
# -- Json Schema# -- Terminal --
# schemars = {version = "0.8"}

# -- Others
derive_more = { version = "1.0.0-beta", features = ["from"] }

# -- Terminal
genai = "0.1.21"
