[package]
name = "rusty_ai"
version = "0.1.0"
edition = "2021"

[lints.rust]
unsafe_code = "forbid"
unused = { level = "allow", priority = -1 } # For exploratory dev.

[dependencies]
# -- Async
tokio = { version = "1", features = ["full"] }

# -- CLI tool
inquire = "0.7.5"

# -- Json
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_with = { version = "3", features = ["macros"] }

crossterm = "0.29.0"
ropey = "1.6.1"
once_cell = "1.17.0"
# -- Json Schema# -- Terminal --
# schemars = {version = "0.8"}

# -- Others
derive_more = { version = "1.0.0-beta", features = ["from"] }

# -- LM Provider
genai = "0.2.3"
# rusty_ollama = "0.1.1"

# -- Syntax Highlighter
tree-sitter = "0.25.3"
# Add language grammars you want to support
tree-sitter-rust = "0.24"
tree-sitter-go = "0.23.4"
tree-sitter-language = "0.1.5"

clipboard = "0.5.0"
regex = "1.11.1"
ollama-rs = "0.3.1"
